--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <footer>
         <p>© 2024 Sua Loja. Todos os direitos reservados.</p>
         <p>
-            <a href="https://facebook.com">Facebook</a> |
-            <a href="https://instagram.com">Instagram</a> |
-            <a href="https://twitter.com">Twitter</a>
+            <a href="https://www.facebook.com/msfechaduras.msfechaduras">Facebook</a> |
+            <a href="https://www.instagram.com/virtuslock/">Instagram</a> |
+            <a href="https://twitter.com/virtuslock">Twitter</a>
         </p>
     </footer>
     <script>
