--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua Loja - Sobre Nós</title>
+    <title>Virtuslock - Sobre Nós</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Sua Loja</h1>
+        <h1>Virtuslock</h1>
         <p>Sobre Nós</p>
     </header>
     <div class="carousel">
@@ -37,7 +37,7 @@
         </form>
     </div>
     <footer>
-        <p>© 2024 Sua Loja. Todos os direitos reservados.</p>
+        <p>© 2024 Virtuslock. Todos os direitos reservados.</p>
         <p>
             <a href="https://www.facebook.com/msfechaduras.msfechaduras">Facebook</a> |
             <a href="https://www.instagram.com/virtuslock/">Instagram</a> |
